--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     // Hilt (dependency injection)
     implementation('com.google.dagger:hilt-android:2.39.1')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt('com.google.dagger:hilt-android-compiler:2.39.1')
     implementation("androidx.hilt:hilt-navigation-fragment:1.0.0")
 
