--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,27 @@ dependencies {
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 
     // Glide
-    implementation('com.github.bumptech.glide:glide:4.12.0') {
-        exclude group: "com.android.support"
-    }
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:annotations:4.12.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
+//    implementation 'com.github.bumptech.glide:glide:4.12.0'
+//    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+//
+
+//    implementation('com.github.bumptech.glide:glide:4.12.0') {
+//        exclude group: "com.android.support"
+//    }
+//    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+//
+//    kapt 'androidx.annotation:annotation:1.2.0'
+//    implementation ("com.github.bumptech.glide:glide:4.12.0@aar") {
+//        transitive = true
+//    }
+//
+//
+//    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
 
     // Room
     implementation("androidx.room:room-runtime:2.3.0")
